# vowpal_wabbit

./: .gitignore  .gitmodules  CMakeLists.txt
bindings/c/: CMakeLists.txt
bindings/c/include/vw/: example.h  label.h  prediction.h  types.h
bindings/c/include/vw/experimental/: example.h  exports.h  feature_space.h  label.h  options.h  parser.h  prediction.h  search.h  types.h  utility.h  vw.h  workspace.h
bindings/c/src/: allocator.h  c_io_adapter.cc  c_io_adapter.h  error_handling.h  example.cc  feature_space.cc  hasher.h  interop_helper.h  label.cc  options.cc  owned_string.h  parser.cc  prediction.cc  search.cc  utility.cc  vw_error_string.h  workspace.cc
bindings/c/test/: CMakeLists.txt  c_example.c  options_test.cc  test.c
c_api/: example.cc
cluster/: cluster.vcxproj
cs/azure/Trainer/Operations/: EvalOperation.cs
cs/cli/: vw_base.cpp  vw_clr.vcxproj
cs/common/: vw_common.csproj
cs/cs/: cs.csproj
cs/cs_json/: cs_json.csproj
cs/unittest/: RunTests.tt
include/vw/: example.h  exports.h  workspace.h
public/: test.html
python/windows27/: packages.config
python/windows35/: packages.config  python35.vcxproj
python/windows36/: python36.vcxproj
test/: RunTests  run_tests.py
test/train-sets/ref/: ccb_simple.stderr  ccb_simple_pdrop.stderr
vowpalwabbit/: CMakeLists.txt  array_parameters.h  cntk.cc  comp_io.cc  comp_io.h  error_data.h  feature_group.h  freegrad.cc  gd_mf.cc  global_data.h  hashstring.h  io_buf.cc  lda_core.cc  marginal.cc  packages.config  parse_args.cc  parse_example_json.h  parse_primitives.cc  parse_regressor.cc  parser.cc  vw.h  vw.psess  vw.vcxproj  vw_dynamic.vcxproj  vw_static.vcxproj  vwdll.cpp  vwdll.h
vowpalwabbit/slim/: CMakeLists.txt
vowpalwabbit/slim/include/: example_predict_builder.h
vowpalwabbit/slim/src/: CMakeLists.txt  example_predict_builder.cc  vw_slim_predict.cc
wasm/: CMakeLists.txt  diff.patch  external.CMakeLists.txt  prepare.sh  readme.md  test.html  wasm_wrapper.cc  wasm_wrapper_full.cc
